@@ -3,6 +3,8 @@ Changes in version 1.9.2 beta (2010-03-18):
 - Switched to use wxXmlSerializer 1.3.2:
   - Error states/messages aren't displayed by using messageboxes no more. Use wxXmlSerializer::GetErrMessage()
     instead if needed.
+  - Serialized data members can be converted to wxVariant (if data type is supported) via xsProperty::ToVariant()
+    member function.
 	
 - Fixed possible crash occured during loading of projects containing shape classes which are not currently known (declared) in the application.
 - Added missing include in ScaledDC.h file preventing wxSF from build if precompiled header were used.
